@@ -1,3 +1,12 @@
+Mon Jan 17 18:37:22 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * MDE/GME/paradigms/PICML/interpreter/quotas/Spring_Deployment/Spring_Deployment_Impl.h:
+        * MDE/GME/paradigms/PICML/interpreter/quotas/Spring_Deployment/Spring_Deployment_Impl.cpp:
+        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator/Quotas_Deployment_Generator.h:
+        * MDE/GME/paradigms/PICML/interpreter/quotas/integrator/Quotas_Deployment_Generator.cpp:
+
+          Updated to latest version of GAME.
+
 Mon Jan 17 05:43:36 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * MDE/GME/paradigms/PICML/interpreter/quotas/javap/Javap_Output_Parser.cpp:
